<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bots.take.testbotsandroid.InsertConfigurationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/BotIdentifier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bot_identifier"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/UserIdentifier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_identifier"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/UserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/UserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/auth_type"
            android:id="@+id/AuthType"
            android:layout_marginBottom="10dp"></Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_bot"
                android:onClick="saveConfigurations"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
